--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -7,6 +7,7 @@ updates:
       interval: daily
       time: "13:00"
     open-pull-requests-limit: 10
+    versioning-strategy: lockfile-only
   
   # Maintain dependencies for GitHub Actions
   - package-ecosystem: github-actions
